--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -728,7 +728,7 @@ a:visited {
 /* Responsive adjustments for social buttons */
 @media (max-width: 768px) {
     .linkedin-section {
-        margin: 2rem 0px;
+        margin: 0rem 0px;
         gap: 0.8rem;
     }
     
@@ -1471,7 +1471,7 @@ a:visited {
 @media (max-width: 768px) {
     .button-padding {
         flex-direction: column;
-        padding: 20px 0 50px;
+        padding: 20px 0;
         gap: 15px;
     }
 
@@ -1485,7 +1485,7 @@ a:visited {
 
 @media (max-width: 480px) {
     .button-padding {
-        padding: 15px 0 60px;
+        padding: 15px 0 ;
     }
 
     .about-button {
@@ -1526,6 +1526,18 @@ a:visited {
 
 .social-section-top{
     margin: 0 100px;
+}
+
+@media (max-width: 1200px) {
+    .social-section-top {
+        margin: 0 80px;
+    }
+}
+
+@media (max-width: 768px) {
+    .social-section-top {
+        margin: 0 40px;
+    }
 }
 
 @media (max-width: 480px) {
